--- a/Analisis_Data.ipynb
+++ b/Analisis_Data.ipynb
@@ -467,14 +467,14 @@
         }
       ],
       "source": [
-        "day_df = pd.read_csv(\"/content/day.csv\")\n",
+        "day_df = pd.read_csv(\"https://raw.githubusercontent.com/fajarnyt/analisa/master/data/day.csv\")\n",
         "day_df.head()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "hour_df = pd.read_csv(\"/content/hour.csv\")\n",
+        "hour_df = pd.read_csv(\"https://raw.githubusercontent.com/fajarnyt/analisa/master/data/hour.csv\")\n",
         "hour_df.head()"
       ],
       "metadata": {
